# rbe500-code

./: .gitignore  README.md  gazebo.md
homework1/: prob2_37.m
homework2/: hello-world.tex
hw-calc/: prob2_15.m  prob2_38.m
hw1/: prob2_15.m
hw2/: dh_3_10_mat.m  hw2.tex  prob3-5.tex  prob3_5.m  prob3_5.mlx  prob3_6.m  prob5_5.m  prob5_5_fk.m  prob5_5_step4.m
hw3/: hw3.tex  prob4_3.m  prob4_5.m
hw4/: hw4.tex  prob4_10.m  prob4_15.m  prob4_15_det.m  prob4_15_jacobian.m  prob4_15_tmats.m  prob4_6.m
hw5/: hw5.tex
hw6/: hw6.m  hw6.tex  hw6_q2.m  hw6_q2_figure.eps  hw6_q3.m  hw6_q3_graph.eps  hw6_q4.m  hw6_q5.m  hw6_system.slx  q3_tuned_settling.eps  q3_tuned_whole.eps  q4_disturbance_plot.eps  q4_steady_state_err.eps  q5_init_plot.eps  q5_settling_plot.eps  q5_tuned.eps
hw7/: essay.tex  refs.bib
hw8/: hw8.tex  hw8_bayes_filter.py  hw8_output.txt
hw_common/: dh_3_10_mat.m
midterm/: midterm.tex  prob2_midterm.m  prob3_midterm.m  prob5_midterm_fk.m  prob5_midterm_step4.m  prob6_midterm.m  prob8_midterm.m
ros2-code/pub-sub-walkthru/: requirements.txt
ros2-code/src/euler_to_quat/: build.zsh  euler_to_quat_subscriber.py  package.xml  publish.sh  setup.py
ros2-code/src/euler_to_quat/euler_to_quat/: euler_to_quat_subscriber.py
ros2-code/src/homework1/: package.xml  setup.cfg  setup.py
ros2-code/src/homework4_ros/: build.zsh  package.xml  publish_fwd_kin.sh  publish_inv_kin.sh  setup.cfg  setup.py
ros2-code/src/problem_3_5/: build.zsh  package.xml  setup.cfg  setup.py
ros2-code/src/problem_3_5/problem_3_5/: fwd_kinematics_subscriber.py
src/cpp/first-package/: package.xml
src/python/first-package/: package.xml  setup.cfg
(+9 files in other folders)
