<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>euler_to_quat</name>
  <version>0.0.0</version>
  <description>ROS Portion of HW2 for RBE 500</description>
  <maintainer email="agupta11@wpi.edu">Arjan Gupta</maintainer>
  <license>Property of Worcester Polytechnic Institute</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
